# hoops_ai_mcp_sample

./: .gitignore  README.md
mcp_server/: README.md  pyproject.toml  server.py
webapi/: .env.example  README.md  core.py  main.py  requirements.txt
webapi/data/: mfr_labels_description.json
webapi/routers/: brep.py  cad.py  files.py  mfr.py
