[project]
name = "hoops-ai-mcp-server-sample"
version = "0.1.0"
description = "Minimal MCP server that exposes HOOPS AI via Claude Desktop"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
